# Code-SDR

./: #auto_saved_files#  .gitignore  99-wideband-sdr.rules  COMPLETION_CHECKLIST.md  COMPREHENSIVE_PROGRESS_REPORT.md  CONSOLIDATED_CHANGELOG.md  Dockerfile  ISSUE_11_VERIFICATION_REPORT.md  PROGRESS_UPDATE.md  README.md  RESOURCE_UTILIZATION.md  ROUTING_FINAL_REPORT.md  ROUTING_QUICK_START.md  ROUTING_STATUS.md  ROUTING_STRATEGY.md  WIDEBAND-SDR-COMPLETE-PACKAGE.md  WORK_SUMMARY.md  Wideband-Test-V1.kicad_pcb  Wideband-Test-V1.kicad_prl  Wideband-Test-V1.kicad_pro  Wideband-Test-V1.kicad_sch  a.out  create_dirs.bat  ethernet_frames.pcap  extio_plugin_tasks.md  fft_ddc_performance_report.json  fp-lib-table  handoff.md  incomplete.txt  lint_output.txt  prompt_0a_implementation_log.md  prompt_0c_implementation_log.md  prompt_0d_final_summary.md  prompt_0d_implementation_log.md  prompts.md  python_ctypes_bridge.py  report-baseline.json  report-optimized-final.json  report-optimized.json  report-original.json  (+4 more)
.clinerules/: debug.txt  prompt-rules.txt
.github/workflows/: agent-export-freerouting.yml  agent-fix-v2-footprint.yml  agent-hardware-cleanup.yml  agent-repo-export.yml  agent-route-continue.yml  agent-route-diagnostic.yml  agent-route-hardware.yml  ci.yml  hardware-v2-release-gate.yml  pcb-recovery-inventory.yml  pcb-route-pr.yml  promote-v2-route.yml  v2-gnd-island-stitch.yml  v2-ground-postprocess.yml  v2-local-power-pours.yml  v2-rf-joint-baseline.yml  v2-rf-preroute.yml  v2-rf50-finalize.yml  v2-rf50-handoff.yml  v2-route-completion.yml  v2-route-continuations.yml  v2-route-corridors.yml  v2-route-density.yml  v2-route-fanout.yml  v2-route-finish-sweep.yml  v2-route-freerouting-v19.yml  v2-route-freerouting-v201.yml  v2-route-from-power-checkpoint.yml  v2-route-power-first.yml  v2-route-power-in2.yml  v2-route-resume.yml  v2-route-rf-mid.yml  v2-route-short-patch.yml  v2-route-signal-groups.yml  v2-route-tournament.yml  v2-route-v19-aggressive.yml  v2-route-v19.yml  v2-route.yml  v2-routing.yml  v2-safe-gap-closure.yml  (+3 more)
.jules/: bolt.md
KSZ9031RNXCC-TR/KSZ9031RNXCC-TR/: KSZ9031RNXCC-TR.epw  part_info.txt
config/: default_config.json  sdr_config_schema.json
docs/: issue12_fft_receive_path.md
documentation/: DEPLOYMENT_PROCEDURES.md  FPGA_ARCHITECTURE.md  INTEGRATION_SPECIFICATIONS.md  PROJECT_STRUCTURE.txt  changelog.md  incomplete.txt  readme.md
extio_plugin/: CMakeLists.txt  README.md
extio_plugin/include/: extio.h  wideband_sdr_extio.h
extio_plugin/src/: extio_impl.cpp  version_resource.rc  wideband_sdr_extio.cpp
fpga-processing/software/: computer_side_interface.py
fpga-processing/testbench/: fpga_testbench.v
fpga-processing/verilog/: adc_interface.v  cic_decimator.v  digital_downconverter.v  ethernet_mac.v  hamming_window.v  nco_generator.v  udp_ip_stack.v
gr-wideband_sdr/: CMakeLists.txt  README.md  setup.py  wideband_sdr_ctypes.h
gr-wideband_sdr/apps/: wideband_sdr_spectrum_analyzer.py
gr-wideband_sdr/grc/: wideband_sdr_source.xml
gr-wideband_sdr/include/gnuradio/wideband_sdr/: api.h.in  source.h
gr-wideband_sdr/lib/: CMakeLists.txt  source_impl.cc  source_impl.h
gr-wideband_sdr/python/: CMakeLists.txt  __init__.py  bindings.cc
hardware/: HARDWARE_VALIDATION.md  IS25LPxxD.bak  Wideband-Test-V1.kicad_dru  Wideband-Test-V1.kicad_pcb  Wideband-Test-V1.kicad_prl  Wideband-Test-V1.kicad_pro  Wideband-Test-V1.kicad_sch  fp-info-cache  fp-lib-table  reccomendations.md  sym-lib-table  validate_hardware.ps1
hardware/MABA-011108/: MABA-011108.dcm  MABA-011108.kicad_sym  MABA-011108.lib  MABA-011108.mod  MABA011108.kicad_mod
hardware/recovery/: PCB_RECOVERY_REPORT.md
hardware/redesign/: COST_COMPARISON.csv  COST_SUMMARY.md  FILTER_RESPONSE.csv  FREQUENCY_PLAN.csv  NOISE_BUDGET.csv  POWER_TREE.csv  README.md  RF_ANALYSIS.md  V1_BOM.csv  cost_model.py  rf_analysis.py  validate_plan.py
hardware/v2/: .route-trigger  Code-SDR-V2.kicad_dru  Code-SDR-V2.kicad_pcb  Code-SDR-V2.kicad_pro  Code-SDR-V2.kicad_sch  CodeSDR.kicad_sym  README.md  RF50_HANDOFF.md  ROUTE_STATUS.md  ROUTING_AUDIT.md  fp-lib-table  rf50_group_overrides.json  rf50_joint_closures.json  rf50_manual_overrides.json  rf50_routes.json  sym-lib-table
legacy/wideband-sdr-firmware/: Makefile  adf4351.c  adf4351.h  antenna_control.c  dc_offset.c  dc_offset.h  dsp_fft.c  dsp_fft.h  lna_control.c  main.c  usb_device.h
openfpga_arch/: sdr_fpga_arch.xml
openfpga_framework/.git_disabled/: config  index  packed-refs
random/: install_windows.bat
scripts/: build_all.py  flash_firmware.py
sdr_fpga_task/config/: task.conf
tests/: .gitignore  README.md  requirements.txt  test_edge_cases.py  test_fft_ddc_performance.py  test_integration.py
tests/cocotb_tests/: Makefile  test_adc_interface.py  test_async_fifo.py  test_cic_decimator.py  test_dma_engine.py  test_ethernet_mac.py  (+7 more)
verilog/: adaptive_gain_scaler.v  adaptive_gain_scaler_tb.v  adc_interface.v  adc_interface_tb.v  app_stream_cdc.v  async_fifo.v  async_fifo_tb.v  average_power_detector.v  average_power_detector_tb.v  cic_decimator.v  cic_decimator_tb.v  clock_manager.v  compensation_filter.v  digital_downconverter.v  digital_downconverter_tb.v  dma_engine.v  ethernet_mac.v  ethernet_mac_tb.v  fft_packetizer.v  fft_processor.v  fft_processor_tb.v  fpga_processing_pipeline.v  fpga_testbench.v  fpga_timing_constraints.sdc  fpga_timing_constraints.xdc  hamming_window.v  hamming_window_tb.v  lifmd6000_clock_pll.v  nco_generator.v  nco_generator_tb.v  rp2040_interface.v  rp2040_interface_tb.v  signal_processing_testbench.v  synthesize.tcl  synthesize_quartus.tcl  twiddle_imag.mem  twiddle_real.mem  udp_ip_stack.v  udp_ip_stack_tb.v  version_auto.v  (+1 more)
wideband-sdr-firmware/: adc_dma.c  adc_dma.h  usb_device.c
wideband-sdr-software/: antenna_controller.py  calibration.py  config_manager.py  digital_downconverter.py  lna_controller.py  setup.py  test_calibration.py  version_auto.py  wideband_sdr.py
wideband_sdr_software/: dc_offset_corrector.py  digital_downconverter.py  nco_synchronizer.py  recording.py  wideband_sdr.py
(+431 files in other folders)
